refactor: RegexGenerator 삭제
- RegexGenerator에서 정규식 생성시 Delimiters 내부 원소에 직접 접근하므로 Delimiters로 책임을
옮기도록 수정한다.