@@ -7,10 +7,7 @@ import calculator.domain.delimiter.Delimiters;
 import calculator.io.ConsoleInputHandler;
 import calculator.io.ConsoleOutputHandler;
 import calculator.util.converter.NumberConvertible;
-import calculator.util.regex.Regex;
-import calculator.util.regex.RegexGenerator;
 import calculator.util.regex.Splitter;
-import java.util.Arrays;
 import java.util.List;
 
 public class StringCalculator {
@@ -19,40 +16,34 @@ public class StringCalculator {
     private final ConsoleOutputHandler consoleOutputHandler;
     private final DelimiterExtractor delimiterExtractor;
     private final Splitter splitter;
-    private final RegexGenerator regexGenerator;
     private final NumberConvertible numberConvertible;
     private final Addable addable;
 
     public StringCalculator(ConsoleInputHandler consoleInputHandler, ConsoleOutputHandler consoleOutputHandler,
                             DelimiterExtractor delimiterExtractor, Splitter splitter,
-                            RegexGenerator regexGenerator, NumberConvertible numberConvertible,
-                            Addable addable) {
+                            NumberConvertible numberConvertible, Addable addable) {
         this.consoleInputHandler = consoleInputHandler;
         this.consoleOutputHandler = consoleOutputHandler;
         this.delimiterExtractor = delimiterExtractor;
         this.splitter = splitter;
-        this.regexGenerator = regexGenerator;
         this.numberConvertible = numberConvertible;
         this.addable = addable;
     }
 
     public Delimiters initialize() {
-        Delimiter commaDelimiter = new Delimiter(",");
-        Delimiter colonDelimiter = new Delimiter(":");
 
-        return new Delimiters(Arrays.asList(commaDelimiter, colonDelimiter));
+        return new Delimiters(List.of(new Delimiter(","), new Delimiter(":")));
     }
 
-    public void run(Delimiters delimiters) {
+    public void run(final Delimiters defaultDelimiters) {
         // 0. 입력한다.
         String input = consoleInputHandler.getUserInput();
 
         // 1.커스텀 구분자를 추출한다.
-        delimiterExtractor.extractDelimitersFrom(input, delimiters);
+        Delimiters delimiters = delimiterExtractor.extractDelimitersFrom(input, defaultDelimiters);
 
         //2. 구분자를 기준으로 문자열을 추출한다.
-        Regex regex = regexGenerator.makeDelimiterAreaRegex(delimiters);
-        List<String> splitInput = splitter.splitByDelimiters(input, regex);
+        List<String> splitInput = splitter.splitByDelimiters(input, delimiters);
 
         //3. 추출한 문자열을 숫자로 변환한다.
         List numbers = numberConvertible.convertStringToNumber(splitInput);
